[add]mainのレイアウト

--- a/chapter8.css
+++ b/chapter8.css
@@ -3,6 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
 .list {
 	width: 960px;
 	margin: 50px auto;
@@ -13,4 +18,27 @@
 }
 .list-text:nth-child(odd) {
 	background-color: #eee;
+}
+main {
+	width: 960px;
+	margin: 50px auto;
+}
+.box {
+	width: 30%;
+	height: 200px;
+	background-color: #FFD700;
+	float: left;
+	margin-right: 5%;
+	margin-bottom: 40px;
+}
+.box:nth-child(3n) {
+	margin-right: 0;
+}
+.box:first-child,
+.box:nth-child(5),
+.box:last-child {
+	background-color: #FF8C00;
+}
+.box:nth-child(n+7) {
+	margin-bottom: 0;
 }
